# PythonBook

./: .buildinfo  .gitignore  README.html  README.md  _config.yml  _toc.yml  environment.yml  genindex.html  ideas_python_course  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: ci.yml
_sources/: README.md
_static/: general.css
chapters/: 0_introduction.ipynb  1_intro_to_python.ipynb  2_1_control_flow_theory.ipynb  2_2_control_flow_exercises.ipynb  2_control_flow.ipynb  3_1_functions_theory.ipynb  3_2_functions_exercises.ipynb  3_functions.ipynb  3_functios.ipynb  4_1_lists_and_tuples_theory.ipynb  4_1_lists_and_tuples_theory_1.ipynb  4_1_lists_and_tuples_theory_2.ipynb  4_1_lists_and_tuples_theory_3.ipynb  4_2_lists_and_tuples_exercises.ipynb  4_lists_and_tuples.ipynb  5_1_sets_and_dictionaries_theory.ipynb  5_1_sets_and_dictionaries_theory_1.ipynb  5_1_sets_and_dictionaries_theory_2.ipynb  5_2_sets_and_dictionaries_exercises.ipynb  5_sets_and_dictionaries.ipynb  6_1_numpy_arrays_theory.ipynb  6_2_numpy_arrays_exercises.ipynb  6_numpy_arrays.ipynb  6_sets_and_dictonaries copy 2.ipynb  7_1_strings_theory.ipynb  7_2_strings_exercises.ipynb  7_strings.ipynb  8_1_files _exceptions_theory_1.ipynb  8_1_files _exceptions_theory_2.ipynb  8_2_files _exceptions_exercises_copy.ipynb  8_files _exceptions.ipynb  8_files _excetions.ipynb  9_1_solutions_chapter_2.ipynb  9_solutions.ipynb  intro.html  intro.md
chapters/00/: introduction.html  introduction.ipynb
chapters/01/: intro_to_python.html  (+1 more)
files/: exercise4.txt  file.txt
(+86 files in other folders)
