[tool.poetry]
name = "Python for Food Scientists"
version = "0.1.0"
description = "Jupyter Book for teaching Python to Food Scientists"
authors = [
    "Michal Ziemski <mziemski@ethz.ch>",
    "Doriela Grabocka <dgrabocka@student.ethz.ch>",
    "Nicholas Bokulich <nicholas.bokulich@hest.ethz.ch>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.0"
jupyter-book = "0.13.1"
numpy = "^1.24"
pandas = "<2"

[tool.poetry.group.dev.dependencies]
jupyterlab = "*"
